[package]
name = "yun_pan"
version = "0.0.1"
description = "云盘第三方客户端"
authors = ["liuyulvv"]
license = "Apache-2.0"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
tauri = { version = "1.4", features = [
    "http-request",
    "window-create",
    "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-deep-link = "0.1.1"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
custom-protocol = ["tauri/custom-protocol"]
